--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
-    "bootstrap": "^5.2.3",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
